--- a/web/libs/app-common/src/pages/AccountSettings/sections/MembershipInfo.module.scss
+++ b/web/libs/app-common/src/pages/AccountSettings/sections/MembershipInfo.module.scss
@@ -1,11 +1,12 @@
 .membershipInfo {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 0;
 }
 
 .divider {
   display: block;
   height: 1px;
-  background: var(--color-neutral-border);
+  background: #1f1f1f;
+  margin: 1rem 0;
 }
